debugging the code

--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
+
+    
     
     
 }
@@ -13,32 +15,32 @@
     background-position:center ;
     background-size: cover;
 }
-.navbar{
+nav{
     width:85%;
     margin: auto;
-    padding: 35px 0;
+    padding: 2% 6%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color:#fff;
 
 }
-.logo{
-    font-size: 22px;
-    color: #fff;
-    cursor: pointer;
+nav img{
+    width: 25px;
 
 }
+
 .navbar ul li{
     list-style: none;
     display: inline-block;
-    margin:0 20px;
+    padding: 8px 12px;
     position: relative;
 }
 .navbar ul li a{
     text-decoration: none;
     color: antiquewhite;
     text-transform: uppercase;
+   
 
 }
 .navbar ul li::after{
@@ -46,14 +48,14 @@
     height: 3px;
     width:0;
     background:aqua;
-    position: absolute;
-    left: 0;
-    bottom:-10px;
+    display: block;
+    margin: auto;
     transition: 0.5s;
 }
 .navbar ul li:hover::after{
     width: 100%;
 }
+
 .content{
     width: 100%;
     position: absolute;
@@ -73,7 +75,7 @@
 .content h1{
     color: #5a360c;
     margin: 0 110px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 150px;
     letter-spacing: 10px;
     opacity: 0.6;
@@ -85,39 +87,30 @@
     -webkit-text-fill-color: transparent;
     -webkit-text-fill-color: transparent;
 }
-button{
-    width: 200px;
-    padding:20px 0;
-    text-align: center;
-    margin: 20px 10px;
-    border-radius: 25px;
-    cursor: pointer;
-    background: transparent;
-    font-weight: bold;
-    border: 2px solid antiquewhite;
+.hero-btn{
+    display: inline-block;
+    text-decoration: none;
     color: antiquewhite;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
     position: relative;
-    overflow: hidden;
+    cursor: pointer;
 }
-span{
-    background:aqua;
-    height:100%;
-    width: 0;
-    border-radius: 25px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: 0.5s;
-}
-button:hover span{
-    width: 100%;
+
+.hero-btn:hover {
+    border: 1px solid aqua;
+    background: aqua;
+    transition: 1s;
     
 }
-button:hover{
+.hero-btn:hover{
     border: none;
     color:black;
 }
+
+
 .icons i{
     color: #fff;
 }
@@ -146,6 +139,32 @@ button:hover{
 .icons ul li i:hover{
     color: aqua;
 }
+
+@media(max-width:700px){
+    .content h1{
+        font-size: 35px;
+    }
+    .content h3{
+        font-size: 10px;
+    }
+    .navbar ul li{
+        display: block;
+    }
+    .navbar{
+        position: absolute;
+        background: rgb(25, 48, 48);
+        color: ;
+        height:100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
+   
+
+    
+} 
 /* places grid */
 .gallery{
     width:80%;
@@ -175,7 +194,7 @@ button:hover{
     flex-basis: 31%;
     background: antiquewhite;
     border-radius: 10px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin-bottom: 5%;
     padding:20px 12px;
     box-sizing: border-box;
@@ -183,7 +202,7 @@ button:hover{
 }
 h4{
     text-align: center;
-    font-weight: 700;
+    font-weight: 600;
     margin: 10px 0;
 }
 .services:hover{
@@ -201,7 +220,7 @@ h4{
     margin: auto;
     text-align: center;
     padding-top: 50px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .row {
@@ -257,10 +276,7 @@ h4{
     opacity: 1;
 }
 
-.places h1 {
-    font-size: 46px;
-    font-weight: 600;
-}
+
 
 .places p {
     color: #777;
@@ -276,7 +292,7 @@ h4{
     margin: auto;
    text-align: center;
     padding-top: 100px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .facilities p{
     padding: 0;
@@ -311,12 +327,13 @@ h4{
     margin-bottom: 15px;
     text-align: left;
 }
+/* testimonials */
 .testimonials{
     width: 80%;
     margin: auto;
     padding-top: 100px;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .testimonials p{
     padding: 0;
@@ -379,7 +396,7 @@ h4{
     border-radius: 10px;
     text-align: center;
     padding: 100px 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .cta h1{
     color: antiquewhite;
@@ -397,9 +414,9 @@ h4{
     text-align: center;
     padding: 30px 0;
     margin-bottom: 50px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-.footer h4{
+.footer h1{
     
     font-weight: 800;
     margin-top: 20px;
@@ -413,7 +430,4 @@ h4{
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
-}
-.footer .icons i{
-    color: #fff;
 }
