--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav img{
 .hero-btn{
     display: inline-block;
     text-decoration: none;
-    color: antiquewhite;
+    color: aqua;
     border: 1px solid #fff;
     padding: 12px 34px;
     font-size: 13px;
@@ -111,34 +111,7 @@ nav img{
 }
 
 
-.icons i{
-    color: #fff;
-}
 
-.icons{
-    display: flex;
-    margin-top: 80px;
-    margin-right: 50px;
-}
-.icons ul{
-    flex: 1;
-    text-align: right;
-}
-.icons ul li{
-    list-style: none;
-    display: inline-block;
-    margin: 15px;
-    padding: 10px;
-}
-.icons ul li i{
-    text-decoration: none;
-    font-size: 20px;
-    cursor: pointer;
-    transition: 0.1s all;
-}
-.icons ul li i:hover{
-    color: aqua;
-}
 
 @media(max-width:700px){
     .content h1{
@@ -418,9 +391,9 @@ h4{
 }
 .footer h1{
     
-    font-weight: 800;
+    font-weight: 300;
     margin-top: 20px;
-    margin-bottom: 15px;
+   
 
 }
 .footer p{
@@ -431,3 +404,77 @@ h4{
     line-height: 22px;
     padding: 10px;
 }
+/* about us page */
+.sub-container{
+    height:50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(pictures/about.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+.sub-container h1{
+    margin-top: 90px;
+}
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+.about-col{
+    flex-basis: 48%;
+    padding:30px 2px;
+
+}
+.about-col img{
+    width: 100%;
+}
+.about-col h2{
+    font-weight: 300;
+}
+.about-col h1{
+    padding-top: 0;
+}
+/* contacts */
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+.location iframe{
+    width: 100%;
+}
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+
+}
+.contact-col div{
+    display:flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.contact-col div p{
+    padding: 0;
+}
+.contact-col div{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color:#555 ;
+    font-weight: 400;
+}
+.contact-col input,.contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
