--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ nav img{
 .hero-btn{
     display: inline-block;
     text-decoration: none;
-    color: aqua;
+    color: rgb(45, 78, 76);
     border: 1px solid #fff;
     padding: 12px 34px;
     font-size: 13px;
@@ -126,7 +126,7 @@ nav img{
     .navbar{
         position: absolute;
         background: rgb(25, 48, 48);
-        color: ;
+        
         height:100vh;
         width: 200px;
         top: 0;
